--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,78 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Inter", sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;       
+  margin: 0;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  height: 100vh;
+  gap: 40px;
+}
+
+.content {
+  padding: 20px;
+  border-radius: 16px;
+  max-width: 350px;
+  text-align: center;
+}
+
+.profile-pic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile-pic img {
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.name h2 {
+  font-weight: 400;
+}
+
+.social-media-link {
+  list-style: none;
+  padding: 10px;
+  border: 1px solid red;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+}
+
+.links ul {
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.social-media-link a {
+  text-decoration: none;
+  font-weight: 500;
+  color: inherit;
+}
+
+.social-media-link img {
+  width: 24px;
+  height: 24px;
 }
