--- a/src/style.css
+++ b/src/style.css
@@ -1,78 +1,96 @@
-* {
-  padding: 0;
-  margin: 0;
-  font-family: "Inter", sans-serif;
-}
-
 body {
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;       
-  margin: 0;
+  min-height: 100vh;
+  background: #FFFFFF;
 }
 
-#container {
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  justify-content: center; 
-  height: 100vh;
-  gap: 40px;
+  justify-content: center;
+  position: relative;
+  width: 400px;
+  height: 800px;
+  background: var(--background, #000) no-repeat center/cover;
+  border-radius: var(--border-radius, 8px);
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.content {
-  padding: 20px;
-  border-radius: 16px;
-  max-width: 350px;
-  text-align: center;
-}
-
-.profile-pic {
+.profile img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  overflow: hidden;
+  margin: 20px auto;
+  display: block;
+  border: 3px solid var(--hover-color);
 }
 
-.profile-pic img {
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.name {
+  text-align: center;
+  color: var(--text-color, #ffffff);
 }
 
 .name h2 {
+  margin: 0;
+  font-size: 1.5em;
   font-weight: 400;
 }
 
-.social-media-link {
-  list-style: none;
-  padding: 10px;
-  border: 1px solid red;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  border-radius: 8px;
+.links {
+  padding: 20px;
 }
 
 .links ul {
   list-style: none;
   padding: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  margin: 0;
 }
 
-.social-media-link a {
-  text-decoration: none;
-  font-weight: 500;
-  color: inherit;
+.social-media-link {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  background: var(--link-bg);
+  border-radius: var(--border-radius);
+  padding: 20px;
+  outline: var(--border); 
 }
 
 .social-media-link img {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.social-media-link a {
+  flex-grow: 1;
+  text-decoration: none;
+  color: var(--link-color);
+  padding: 0 10px; 
+  border-radius: var(--border-radius);
+}
+
+.social-media-link:hover {
+  background: var(--hover-color);
+  outline: var(--border-hover);
+}
+
+.social-media-link:hover a{
+  color: var(--link-color-hover);
+}
+
+.qr-code {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.qr-code img {
+  width: 100px;
+  height: 100px;
 }
