--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,20 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.container .background-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.4;
+}
+.container .content {
+  position: relative;
+  z-index: 1;
+}
+
 .profile img {
   width: 100px;
   height: 100px;
